[tool.poetry]
name = "vas3k_blog"
version = "0.1.0"
description = ""
authors = ["Vasily Zubarev <me@vas3k.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.4"
python-slugify = "^8.0.0"
psycopg2-binary = "^2.9.5"
beautifulsoup4 = "^4.11.1"
mistune = "3.0.0rc4"
maxminddb-geolite2 = "^2018.703"
python-telegram-bot = "^13.15"
requests = "^2.28.1"
Pillow = "^9.3.0"
django-debug-toolbar = "^3.8.1"
premailer = "^3.10.0"
lxml = "^4.9.2"
PyJWT = "^2.6.0"
cryptography = "^39.0.0"
gunicorn = "^20.1.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
sentry-sdk = "^1.12.1"
Authlib = "^1.2.0"
urllib3 = "^2.2.2"
tzdata = "^2024.1"

[tool.poetry.dev-dependencies]
pytest = "^7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
