[tool.poetry]
name = "vas3k_blog"
version = "0.1.0"
description = ""
authors = ["Vasily Zubarev <me@vas3k.ru>"]

[tool.poetry.dependencies]
python = "^3.12"
Django = "5.1.5"
python-slugify = "^8.0.0"
psycopg2-binary = "^2.9.10"
beautifulsoup4 = "^4.11.1"
mistune = "3.0.2"
maxminddb-geolite2 = "^2018.703"
python-telegram-bot = "^13.15"
requests = "^2.28.1"
Pillow = "11.1.0"
django-debug-toolbar = "^5.0.1"
premailer = "^3.10.0"
lxml = "^5.3.1"
PyJWT = "^2.6.0"
cryptography = "^44.0.1"
gunicorn = "^20.1.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
sentry-sdk = "^1.12.1"
Authlib = "^1.2.0"
urllib3 = "<2.0.0"
tzdata = "^2024.1"
standard-imghdr = "^3.13.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
